--- a/info.yaml
+++ b/info.yaml
@@ -4,39 +4,4 @@
     (dependencies): {}
     (commands):
         (install): ruby install.rb
-        (version): ruby python_version.rb
-    (contributes):
-        (sub-package-manager):
-            pip:
-                (install): ruby pip.rb
-                (version): ruby pip_version.rb
-                (uninstall): pip uninstall 
-(project):
-    name: A Project
-    description: A new project
-    
-    commands: &commands # if you dont know what the & means, see https://blog.daemonl.com/2016/02/yaml.html
-        run: echo 'no run command written yet'
-    dependencies: &dependencies
-        atk: 0.0.1
-    
-    (advanced_setup):
-        (put_new_dependencies_under): [ '(project)', 'basic_info', 'dependencies' ]
-        # caveats for a specific OS
-        when(--os is 'mac'):
-            (project_commands):
-                <<: *commands
-            (dependencies):
-                <<: *dependencies
-            
-        when(--os is 'windows'):
-            (project_commands):
-                <<: *commands
-            (dependencies):
-                <<: *dependencies
-                
-        when(--os is 'linux'):
-            (project_commands):
-                <<: *commands
-            (dependencies):
-                <<: *dependencies
+        (version): ruby version.rb
