- change to run command

--- a/info.yaml
+++ b/info.yaml
@@ -3,5 +3,6 @@
     (install_command): ruby install.rb
     (dependencies): {}
     (commands):
+        (run): ruby install.rb
         (install): ruby install.rb
         (version): ruby version.rb
